# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  09 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/create-iso.sh:
  Fix creation of the EFI images. Since it is FAT, we can't go around
  perserving permissions, now, can we?

  06 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/livecdfs-update.sh:
  Added a patch from Andrew Gaffney <agaffney@gentoo.org> to fix my completely
  broken sed for rc.conf, which caused all kinds of hell to break loose when
  booting a new CD. This is 2.0.3_pre3.

  06 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Added a patch from Christian Heim <phreak@gentoo.org> to remove stale files,
  such as group- from /etc before creating our stage tarballs. This is for bug
  #166695.

  06 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Commenting out the livecd-kernel code, since the Installer should be doing
  everything necessary itself.

  14 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Fix up the pci.ids/usb.ids code to work with newer pciutils and future-proof
  the usbutils hanlding in case they follow suit with pciutils.

  13 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> arch/alpha.py,
  arch/amd64.py, arch/arm.py, arch/hppa.py, arch/ia64.py, arch/mips.py,
  arch/ppc.py, arch/ppc64.py, arch/s390.py, arch/sh.py, arch/sparc.py,
  arch/sparc64.py, arch/x86.py, catalyst, modules/generic_stage_target.py:
  Added a patch from Andrew Gaffney <agaffney@gentoo.org> to fix up the
  problems with using all of the various subarch settings.

  13 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh, targets/support/create-iso.sh:
  Disabled deleting of /boot so we actually can work with EFI/grub, made EFI
  check look in the correct location, and made sure we don't delete /voot